# demo-autoqa-coinmarketcap

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
demo_autoqa_coinmarketcap/api/: base.py  base_request.py  cmc_api.py
demo_autoqa_coinmarketcap/api/models/: error_response.py  info.py  status.py
demo_autoqa_coinmarketcap/pages/: currency.py  login.py  main.py  manager.py
demo_autoqa_coinmarketcap/utils/: attach.py  validators.py
tests/: conftest.py
tests/api/: test_api_key.py  test_cryptocurrency_historical.py  test_cryptocurrency_info.py
tests/mobile/: conftest.py  test_cmc_app.py
tests/ui/: conftest.py  test_currencies_page.py  test_login.py  test_main_page.py
