[tool.poetry]
name = "demo-autoqa-coinmarketcap"
version = "0.1.0"
description = ""
authors = ["Ivan Khokhlov <xxx.mailbox73@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_autoqa_coinmarketcap"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
